--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kopi Kencanan</title>
+    <title>Kopi Kencan</title>
     <link rel="stylesheet" href="css/style1.css">
 </head>
 
