--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kopi Kencan</title>
     <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap-icons.css">
 </head>
 
 <body>
@@ -27,10 +29,10 @@
 
 <header>
     <div class="kiri">
-<h1> Kopi Kuy
+<h1> Kopi Kencan
     <img src="images/icon/icon_kopi.svg" alt="">
 </h1>
-<p>Kopi Kuy merupakan sebuah startup kopi retail yang ingin menyajikan 
+<p>Kopi Kencan merupakan sebuah startup kopi retail yang ingin menyajikan 
     high quality Coffee untuk para pelanggannya.</p>
     <p>Dapat dibeli Melalui</p>
     <div class="olshop">
@@ -67,11 +69,11 @@
 </section>
 
 <section class="about-us" id="about-us">
-    <h2>Gak Ngopi Gak Kuy</h2>
-    <p>Didirikan pada 2017, Kopi Kuy merupakan sebuah startup kopi retail 
+    <h2>Gak Ngopi Kencan Gak Asik</h2>
+    <p>Didirikan pada 2017, Kopi Kencan merupakan sebuah startup kopi retail 
         yang ingin menyajikan kopi dengan kualitas tinggi untuk para pelanggannya. 
-        Nama Kuy yang diambil dari "yuk" yang merupakan harapan kami untuk mengajak semua 
-        yang terlibat dalam bisnis kami untuk bersama-sama menikmati sajian kopi yang berkualitas.</p>
+        Nama Kencan yang merupakan harapan kami untuk mengajak semua pasangan yang sedang berkencan untuk 
+     terlibat dalam bisnis kami untuk bersama-sama menikmati sajian kopi yang berkualitas.</p>
     <img src="images/about-us/aset_kopi_jumbo.png" alt="">
     <p>Kopi yang kami jual, hanya dari petani terpilih, dan berkualitas tinggi diproses 
         secara sempurna dan diteruskan oleh para barista handal, yang penuh semangat 
