--- a/index.html
+++ b/index.html
@@ -158,15 +158,32 @@
     </div>
 </section>
 
-<footer>
-    <div class="navigasi">
-        <a href="">Best Seller</a>
-        <a href="">Our Team</a>
-        <a href="">Review</a>
-        <a href="">Contact Us</a>
+<footer class="riki-block footer-small py-4 bg-blackblue">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-12 col-md-8">
+          <ul class="nav justify-content-center justify-content-md-start">
+            <li class="nav-item active">
+                <a class="nav-link" href="best-seller">Best Seller</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#our-team">Our Team</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#review">Review</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact-us">Contact Us</a>
+              </li>
+          </ul>
+        </div>
+
+        <div class="col-12 col-md-4 mt-4 mt-md-0  text-center text-md-right">
+          © 2023 Kopi Kuy &amp; Team . All Rights Reserved
+        </div>
+      </div>
     </div>
-    <p>Copyright kopi kuy: © 2023 Kopi Kuy. All Rights Reserved</p>
-</footer>
+  </footer>
 
     <!--
         Kode HTML tidak boleh lewat dari batas ini
