--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <div class="collapse navbar-collapse" id="navbarNav11">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html#best-seller">Best Seller</a>
+                <a class="nav-link" href="#best-seller">Best Seller</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#our-team">Our Team</a>
+                <a class="nav-link" href="#our-team">Our Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#review">Review</a>
+                <a class="nav-link" href="#review">Review</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#contact-us">Contact Us</a>
+                <a class="nav-link" href="#contact-us">Contact Us</a>
               </li>
             </ul>
             <a class="shop" href="produk.html"></a>
@@ -185,7 +185,7 @@
         <div class="col-12 col-md-8">
           <ul class="nav justify-content-center justify-content-md-start">
             <li class="nav-item active">
-                <a class="nav-link" href="best-seller">Best Seller</a>
+                <a class="nav-link" href="#best-seller">Best Seller</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#our-team">Our Team</a>
