--- a/index.html
+++ b/index.html
@@ -8,43 +8,20 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kopi Kencan</title>
     <link rel="stylesheet" href="css/style1.css">
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/bootstrap/bootstrap-icons.css">
-    <script src="vendor/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.6.3.min.js"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-blackblue navbar-expand-lg bisadicopy">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="images/logo/logo_kuy.png" height="30" alt="image">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav11" aria-controls="navbarNav11" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav11">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#best-seller">Best Seller</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#our-team">Our Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#review">Review</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact-us">Contact Us</a>
-              </li>
-            </ul>
-            <a class="shop" href="produk.html"></a>
-            <a class="btn btn-outline-light ms-md-3" href="https://wa.me/6281290465033">
-                chat <i class="bi bi-whatsapp"></i>
-            </a>
-          </div>
+    <nav>
+        <img class="logo" src="images/logo/logo_kuy.png">
+        <div class="navigasi">
+            <a href="#best-seller">Best Seller</a>
+            <a href="#our-team">Our Team</a>
+            <a href="#review">Review</a>
+            <a href="#contact-us">Contact Us</a>
         </div>
-      </nav>
+        <a class="shop" href="produk.html">Shop</a>
+        <a class="chat" href="https://wa.me/628123456?text=Saya ingin bertanya" target="_blank">Chat</a>
+    </nav>
 
     <!-- Tulis Kode HTML / <header> Setelah baris di bawah ini (baris 28) -->
 
