--- a/index.html
+++ b/index.html
@@ -156,32 +156,15 @@
     </div>
 </section>
 
-<footer class="riki-block footer-small py-4 bg-blackblue">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-12 col-md-8">
-          <ul class="nav justify-content-center justify-content-md-start">
-            <li class="nav-item active">
-                <a class="nav-link" href="#best-seller">Best Seller</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#our-team">Our Team</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#review">Review</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact-us">Contact Us</a>
-              </li>
-          </ul>
-        </div>
-
-        <div class="col-12 col-md-4 mt-4 mt-md-0  text-center text-md-right">
-          © 2023 Kopi Kuy &amp; Team . All Rights Reserved
-        </div>
-      </div>
+<footer>
+    <div class="navigasi">
+        <a href="#best-seller">Best Seller</a>
+        <a href="#our-team">Our Team</a>
+        <a href="#review">Review</a>
+        <a href="#contact-us">Contact Us</a>
     </div>
-  </footer>
+    <p>Copyright kopi kuy: © 2023 Kopi Kuy. All Rights Reserved</p>
+</footer>
 
     <!--
         Kode HTML tidak boleh lewat dari batas ini
