--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <header>
     <div class="kiri">
 <h1> Kopi Kencan
-    <img src="images/icon/icon_kopi.svg" alt="">
+    <img src="images/icon/icon_kopi.svg" class="svg-kopi">
 </h1>
 <p>Kopi Kencan merupakan sebuah startup kopi retail yang ingin menyajikan 
     high quality Coffee untuk para pelanggannya.</p>
@@ -84,8 +84,10 @@
         hingga barista dengan sertifikat internasional.</p>
     <div class="team">
         <img src="images/team/team1.jpg" alt="">
-        <h3>Riki Steven</h3>
-        <p>Founder Kopi Kuy</p>
+        <div class="text">
+            <h3>Riki Steven</h3>
+            <p>Founder Kopi Kuy</p>
+        </div>
     </div>
     <div class="team">
         <img src="images/team/team2.jpg" alt="">
