--- a/produk.html
+++ b/produk.html
@@ -211,7 +211,7 @@
                 Data = data.arabica
                 break
               case "robusta":
-                Data = data.arabica
+                Data = data.robusta
                 break
               case "milkshake":
                 Data = data.milkshake
